--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 flask==2.0.2
 flask-login==0.5.0
 sqlalchemy==1.4.27
+psycopg2==2.9.2
 pydantic[email]==1.8.2
 flask-pydantic==0.9.0
 flask-cors==3.0.10
