--- a/frontend-android/app/src/main/AndroidManifest.xml
+++ b/frontend-android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:label="@string/app_name" android:name=".LoginActivity"/>
         <activity android:label="@string/app_name" android:name=".AddItemActivity"/>
+        <activity android:label="@string/app_name" android:name=".ui.AddReviewActivity"/>
     </application>
 
 </manifest>
